add exisitng file

--- a/Horiseon/assets/css/style.css
+++ b/Horiseon/assets/css/style.css
@@ -1,4 +1,4 @@
-
+/*general*/
 * {
     box-sizing: border-box;
     padding: 0;
@@ -8,6 +8,8 @@
 body {
     background-color: #d9dcd6;
 }
+
+/* HEADER */
 
 header {
     padding: 20px;
@@ -42,6 +44,8 @@ header nav ul li {
     margin-left: 25px;
 }
 
+/* TEXT STYLES */
+
 a {
     color: #ffffff;
     text-decoration: none;
@@ -51,6 +55,8 @@ p {
     font-size: 16px;
 }
 
+/* HERO DIV WITH BACKGROUND IMAGE */
+
 .hero {
     height: 800px;
     width: 100%;
@@ -59,6 +65,8 @@ p {
     background-size: cover;
     background-position: center;
 }
+
+/* FLOATS */
 
 .float-left {
     float: left;
@@ -70,11 +78,15 @@ p {
     margin-left: 25px;
 }
 
+/* MAIN */
+
 main {
     width: 75%;
     display: inline-block;
     margin-left: 20px;
 }
+
+/* ASIDE */
 
 .benefits {
     margin-right: 20px;
@@ -103,6 +115,8 @@ main {
     max-width: 150px;
 }
 
+/* SERVICES */
+
 .service {
     margin-bottom: 20px;
     padding: 50px;
@@ -120,6 +134,8 @@ main {
     margin-bottom: 20px;
     font-size: 36px;
 }
+
+/* FOOTER */
 
 footer {
     padding: 30px;
